--- a/assets/sass/atoms/_menu-toggle.scss
+++ b/assets/sass/atoms/_menu-toggle.scss
@@ -40,4 +40,8 @@
     transition: transform 0.3s;
     &:last-child {margin-bottom: 0;}
   }
+
+  @media screen and (max-width: $screen-xs-max) {
+    right: $gutter/2;
+  }
 }
